# fish

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/tilemaps/: farm.tmx
src/: asset_tracking.rs  constants.rs  dev_tools.rs  lib.rs  main.rs  states.rs
src/demo/: animation.rs  level.rs  movement.rs  player.rs
src/game/: animation.rs  camera.rs  collision.rs  enemy.rs  level.rs  mod.rs  movement.rs  player.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  mod.rs  pause.rs  settings.rs  splash.rs  title.rs
src/theme/: widget.rs
src/world/: mod.rs  tiled.rs  tiledhelper.rs  tilemap.rs
